--- a/style.css
+++ b/style.css
@@ -250,9 +250,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     height:250px;
     text-align:center;
     grid-row:3/4;
-    
-    
-    
+    width:auto;
 }
 button.email {
     background-color:#00955e;
