--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ img.mainPhoto {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
-   
 }
 img {
     height: auto;
@@ -93,7 +92,7 @@ img {
 }
 #content {
     display:grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     height:100vh;
     width:100vw;
@@ -105,26 +104,18 @@ img {
 #nav {
     height:80px;
     grid-column:1/4;
-    grid-row:1/2;
+    grid-row:1/3;
     display:flex;
     align-items:center;
     justify-content: space-around;
     letter-spacing:2px;
     background-color:white;
     font-weight:100;
-    
 }
-/*will be called with javascript. Make nav bar sticky. */
-.sticky {
-    position:fixed;
-    top:0;
-    width:100%;
-}
-.sticky + #content {
-    padding-top:60px;
+.topnav {
+    display:none;
 }
 #title {
-    
     text-align:center;
     word-wrap:break-word;
     width:190px;
@@ -156,21 +147,14 @@ img {
 }
 #locations {
     grid-column:1/4;
-    margin-top:80px;
+    margin-top:50px;
     margin-bottom:50px;
     display:flex;
     gap:20px;
     justify-content:left;
 }
-/*change for mobile view*/
-@media (max-width: 1000px) {
-    #locations {
-          flex-wrap:wrap;
-          justify-content:center;
-     }
-}
 #location1, #location2 {
-    width:380px;
+    width:auto;
 }
  h1 {
     font-size: 3rem;
@@ -537,4 +521,84 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     letter-spacing:2px;
     padding-left:10px;
     padding-right:10px;
+}
+/*change for mobile view*/
+@media (max-width: 1000px) {
+    #locations {
+          flex-wrap:wrap;
+          justify-content:center;
+     } 
+     #nav {
+         display:none;
+     }
+     /* Style the navigation menu */
+     .topnav {
+       overflow:auto;
+       background-color: white;
+       position: relative;
+       width:98vw;
+       display:block;
+       text-align:left;
+       margin-left:30px;
+       grid-row:1/3;
+     }
+     
+     /* Hide the links inside the navigation menu (except for logo/home) */
+     .topnav #myLinks {
+       display: none;
+     }
+     #myLinks {
+         font-size:2rem;
+     }
+     
+     /* Style navigation menu links */
+     .topnav a {
+       color: black;
+       padding: 14px 16px;
+       text-decoration: none;
+       display: block;
+     }
+     
+     /* Style the hamburger menu */
+     .topnav a.icon {
+       background: white;
+       color:#a7d6f0 ;
+       display: block;
+       position: absolute;
+       height:50px;
+       right: 0;
+       top: 0;
+     }
+     
+     /* Add a grey background color on mouse-over */
+     .topnav a:hover {
+       background-color:#a7d6f0 ;
+       color:white;
+       
+     }
+     
+     /* Style the active link (or home/logo) */
+     .active {
+       background-color: white;
+       color: white;
+       display:flex;
+       flex-direction:column;
+       font-size:3rem;
+     }
+     /*resize fonts*/
+     #hour {
+        font-size:1.8rem;
+        letter-spacing: 4px;
+     }
+     #address {
+         font-size:1.5rem;
+     }
+     #banner.address,button.email {
+         font-size:1.3rem;
+         width:auto;
+     }
+     #github {
+         font-size:1rem;
+     }
+   
 }
