changed sizing of footer

--- a/style.css
+++ b/style.css
@@ -94,7 +94,6 @@ img {
     display:grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-    height:100vh;
     width:100vw;
    
 }
@@ -593,7 +592,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
      #address {
          font-size:1.5rem;
      }
-     #banner.address,button.email {
+     #banner-address,button.email {
          font-size:1.3rem;
          width:auto;
      }
