--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ table {
 html,body {
     overflow-x:hidden;
 }
+/*hide icon*/
+.icon {
+    display:none;
+}
 #slideShow {
     display:flex;
     justify-content: center;
@@ -98,9 +102,15 @@ img {
     width:100vw;
    
 }
+/*hide contents*/
 #tabcontents {
     grid-row:2/3;
+   
 }
+#home,#faq,#menus,#privateevents {
+    display:none;
+}
+/**/
 #nav {
     height:80px;
     grid-column:1/4;
@@ -118,9 +128,7 @@ img {
     top:0;
     width:100%;
 }
-#topnav {
-    display:none;
-}
+
 #title {
     text-align:center;
     word-wrap:break-word;
@@ -505,20 +513,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-left:10px;
     padding-right:10px;
 }
-#topnav + #tabContent {
-    padding:60px;
+/*hide footer on desktop view*/
+#footerMobile {
+    display:none;
 }
+
 /*change for mobile view*/
 @media (max-width: 1000px) {
     #locations {
           flex-wrap:wrap;
           justify-content:center;
      } 
-     #nav {
-         display:none;
-     }
      /* nav menu*/
-     #topnav {
+     #nav {
        overflow:auto;
        background-color: white;
        position: relative;
@@ -526,24 +533,27 @@ input[type="date"]::-webkit-calendar-picker-indicator {
        display:block;
        text-align:left;
        grid-row:1/3;
-       position: fixed;
+       font-size:3rem;
+       height: auto;
+       padding-top: 10px;
+       padding-bottom: 10px;
      }
      /* Hide links in hamburger*/
-     #topnav #myLinks {
+     #nav #options {
        display: none;
+       font-size: 2.5rem;
      }
-     #myLinks {
-         font-size:2rem;
-     }
-     /*  nav menu links */
-     #topnav a {
+     
+    /* nav menu links */
+     #nav #option {
        color: black;
        padding: 14px 16px;
        text-decoration: none;
        display: block;
      }
+     
      /* hamburger menu*/
-     #topnav a.icon {
+     #nav a.icon {
        background: white;
        color:#a7d6f0 ;
        display: block;
@@ -551,21 +561,21 @@ input[type="date"]::-webkit-calendar-picker-indicator {
        height:50px;
        right: 0;
        top: 0;
+       display:block
      }
-     /* switch color and background color on hover */
-     #topnav a:hover {
+     
+     #topNav a:hover {
        background-color:white ;
-       color:#a7d6f0;
+       
      }
-     /* active links */
-     .active {
-       background-color: white;
-       color: white;
-       display:flex;
-       flex-direction:column;
-       font-size:3rem;
-     }
+    
      /*resize fonts*/
+     #title {
+         font-size:2.3rem;
+         width:400px;
+         
+         text-align: left;
+     }
      #hour {
         font-size:1.8rem;
         letter-spacing: 4px;
@@ -600,7 +610,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
          font-size:1.8rem;
      }
      p#allergy, p#additions, p#glutenFree, p#blend {
-         font-size:1.4rem;
+         font-size:1.6rem;
      }
      p#blend {
          margin-top:10px;
@@ -627,9 +637,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         color: white;
         letter-spacing: 4px;
         padding: 15px;
+        display:block
      }
      img.mainPhoto {
-         margin-top:125px;
+         margin-top:1px;
      }
    
 }
