--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ img {
 #title {
     text-align:center;
     word-wrap:break-word;
-    width:190px;
+    width:200px;
     font-size:1.4rem;
     font-weight:100px;
     cursor:pointer;
@@ -163,7 +163,7 @@ img {
     margin-top:50px;
     margin-bottom:50px;
     display:flex;
-    gap:20px;
+    gap:17em;
     justify-content:left;
 }
 #location1, #location2 {
